src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__diff_mode_scroll_top.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
   1    0 -line 1                                                          ↑21% 
   2    0 -line 2                                                               
   3    0 -line 3                                                               
   4    0 -line 4                                                               
   5    0 -line 5                                                               
   6    0 -line 6                                                               
   7    0 -line 7                                                               
   8    0 -line 8                                                               
   9    0 -line 9                                                               
  10    0 -line 10                                                              
  11    0 -line 11                                                              
  12    0 -line 12                                                              
  13    0 -line 13                                                              
  14    0 -line 14                                                              
  15    0 -line 15                                                              
  16    0 -line 16                                                              
  17    0 -line 17                                                              
  18    0 -line 18                                                              
  19    0 -line 19                                                              
  20    0 -line 20                                                              
  21    0 -line 21                                                              
 Diff: large_file.rs [1/1] | ←/→ 或  [/] 切 换 文 件  | j/k 滚 动  | q/Esc 退 出         
────────────────────────────────────────────────────────────────────────────────
(Diff 模 式  - 按  q/Esc/Ctrl+D 退 出 )
