src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__diff_mode_single_file.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
   1    1  fn main() {                                                          
   2    0 -    println!("Hello");                                               
   0    2 +    println!("Hello, World!");                                       
   3    3  }                                                                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Diff: src/main.rs [1/1] | ←/→ 或  [/] 切 换 文 件  | j/k 滚 动  | q/Esc 退 出           
────────────────────────────────────────────────────────────────────────────────
(Diff 模 式  - 按  q/Esc/Ctrl+D 退 出 )
