src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__diff_summary.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
                                                                                
• Edited 1 files (+8 -3)                                                        
├─ src/lib.rs (+8 -3)                                                           
                                                                                
按  d 查 看 详 情                                                                    
                                                                                
                                                                                
• Edited 2 files (+23 -3)                                                       
├─ src/lib.rs (+8 -3)                                                           
├─ tests/test.rs (+15 -0)                                                       
                                                                                
按  d 查 看 详 情                                                                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 [Ready]                                                                        
────────────────────────────────────────────────────────────────────────────────
⟩
