src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__fix4_cjk_wrap_bottom.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -5                          
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -6                          
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -7                          
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -8                          
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -9                          
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -10                         
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -11                         
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -12                         
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -13                         
这 是 一 段 很 长 的 中 文 内 容 用 于 测 试 折 行 后 最 后 
一 行 是 否 可 见 -14                         
BOTTOM_CJK_OK                           
○ [Ready]                               
────────────────────────────────────────
⟩
