src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__fix4_many_lines_bottom.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
Content line 30 with some moderate length text here                             
Content line 31 with some moderate length text here                             
Content line 32 with some moderate length text here                             
Content line 33 with some moderate length text here                             
Content line 34 with some moderate length text here                             
Content line 35 with some moderate length text here                             
Content line 36 with some moderate length text here                             
Content line 37 with some moderate length text here                             
Content line 38 with some moderate length text here                             
Content line 39 with some moderate length text here                             
Content line 40 with some moderate length text here                             
Content line 41 with some moderate length text here                             
Content line 42 with some moderate length text here                             
Content line 43 with some moderate length text here                             
Content line 44 with some moderate length text here                             
Content line 45 with some moderate length text here                             
Content line 46 with some moderate length text here                             
Content line 47 with some moderate length text here                             
Content line 48 with some moderate length text here                             
Content line 49 with some moderate length text here                             
USER_SHOULD_SEE_THIS <<                                                         
○ [Ready]                                                                       
────────────────────────────────────────────────────────────────────────────────
⟩
