src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__fix4_narrow_wrap_bottom.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
This is a very long line that will      
definitely wrap at 40 columns width     
terminal. line 4                        
This is a very long line that will      
definitely wrap at 40 columns width     
terminal. line 5                        
This is a very long line that will      
definitely wrap at 40 columns width     
terminal. line 6                        
This is a very long line that will      
definitely wrap at 40 columns width     
terminal. line 7                        
This is a very long line that will      
definitely wrap at 40 columns width     
terminal. line 8                        
This is a very long line that will      
definitely wrap at 40 columns width     
terminal. line 9                        
BOTTOM_LINE <<                          
                                        
                                        
○ [Ready]                               
────────────────────────────────────────
⟩
